--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,7 @@ jobs:
         rustup default nightly
         cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        cd rust/mdtesting
+        rustup default nightly
+        cargo test --verbose
